--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,6 +1,7 @@
 {% extends "global/base.html" %}
 
 {% block content %}
+{% if contacts %}
     <div class = "responsive-table">
         <table class = "contacts-table">
             <caption class = "table-caption">
@@ -21,7 +22,10 @@
                 {% for contact in contacts %}
                     <tr class = "table-row">
                         <td class = "table-cel">
-                            <a class = "table-link" href = "#"> 
+                            <a 
+                                class = "table-link" 
+                                href = "{% url "contact:contact" contact.id %}"
+                            > 
                                 {{ contact.id }}
                             </a>
                         </td>
@@ -47,5 +51,11 @@
             </tbody>
         </table>
     </div>
-
+{% else %}
+<div class="single-contact">
+    <h1 class="single-contact-name">
+        No contacts found.
+    </h1>
+</div>
+{% endif %}
 {% endblock content %}
