--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -1,41 +1,45 @@
-{% extends "global/base.html" %}
-
+{% extends 'global/base.html' %}
 {% block content %}
-    <div class="form-wrapper">
+  <div class="form-wrapper">
+    <h2>Contact</h2>
+    
+    <form 
+      action="{% url 'contact:create' %}"
+      method="POST"
+      enctype="multipart/form-data"
+    >
+      {% csrf_token %}      
 
-        <h2>Contact</h2>
+      <div class="form-content">
 
-        <form 
-        action="{% url "contact:create" %}"
-        method="POST"
-        enctype="multipart/form-data"
-        >
+        {% for field in form %}
+          <div class="form-group">
+            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+            {{ field }}
+            {{ field.errors }}
+            {% if field.help_text %}
+                <p class="help-text">{{ field.help_text }}</p>
+            {% endif %}
             
-        {% csrf_token %}
+          </div>
+        {% endfor %}
+      </div>
 
+      {% if form.non_field_errors %}
         <div class="form-content">
-
-            {% for field in form %}
-                <div class="form-group">
-                    <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                    {{ field }}
-                    {% if field.errors %}
-                        <ul class="errorlist">
-                            {% for error in field.errors %}
-                                <li>{{ error }}</li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
-                </div>
-            {% endfor %}
-        </div> 
-
-        <div class="form-content">
-            <div class="form-group">
-            <button class="btn" type="submit">Send</button>
+          <div class="form-group">
+            <div class="message error">
+              {{ form.non_field_errors }}
             </div>
+          </div>
         </div>
+      {% endif %}
 
-        </form>
-    </div>
+      <div class="form-content">
+        <div class="form-group">
+          <button class="btn" type="submit">Send</button>
+        </div>
+      </div>
+    </form>
+  </div>
 {% endblock content %}
