--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -17,16 +17,19 @@
                 <img src="{{ contact.picture.url }}" alt="{{ contact.first_name }} {{ contact.last_name }}">
             </p>
         {% endif %}
-        <div class = "contact-links">
-            <a class="btn btn-link" href="{% url 'contact:update' contact.id %}" class="btn">Update</a>
-            <form action="{% url "contact:delete" contact.id %}" method="POST">
-                {% csrf_token %}
 
-                {% if confirmation == 'no' %}
-                    <input type="hidden" name="confirmation" value="yes">
-                    <button class="btn btn-link btn-delete" type="submit">Confirmar</button>
-                {% else %}
-                    <button class="btn btn-link btn-delete" type="submit">Delete</button>
-                {% endif %}
-    </div>
+        {% if user == contact.owner %}
+            <div class = "contact-links">
+                <a class="btn btn-link" href="{% url 'contact:update' contact.id %}" class="btn">Update</a>
+                <form action="{% url "contact:delete" contact.id %}" method="POST">
+                    {% csrf_token %}
+
+                    {% if confirmation == 'no' %}
+                        <input type="hidden" name="confirmation" value="yes">
+                        <button class="btn btn-link btn-delete" type="submit">Confirmar</button>
+                    {% else %}
+                        <button class="btn btn-link btn-delete" type="submit">Delete</button>
+                    {% endif %}
+        </div>
+    {% endif %}
 {% endblock content %}
