Changing contact name

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -10,7 +10,7 @@
         <p><b>Phone:</b> {{contact.phone}}</p>
         <p><b>Created Date:</b> {{contact.created_date}}</p>
         <p><b>Description:</b> {{contact.description}}</p>
-        <p><b>Catrgory:</b> {{contact.category.name}}</p>
+        <p><b>Category:</b> {{contact.category.name}}</p>
 
         {% if contact.picture %}
             <p>
